fix($style): login button alignment

--- a/client/app/main.css
+++ b/client/app/main.css
@@ -1,5 +1,5 @@
-.top-bar-section .button {
-    margin-right: 10px;
+#login-button {
+    margin-top: 7px;
 }
 
 .navbar-nav IMG.avatar {
